# EA-Keyboard-Layout

./: .gitignore  EX np.py  README.md  assignment.ipynb  configs.py  crossover_indices.json  crossover_test.ipynb  crossover_times.ipynb  initialization_test.ipynb  mutation.py  plot_run_results.ipynb  pop_size_2_13.json  pyproject.toml  run_experiment.py  time_crossover.py  tune_params.ipynb
Meeting-Notes/: 01_potential_imrpovements.md  02_Baseline.md  03_last_meeting.md  potential_imrpovements.md
edge crossover/: EX dict.py
mutation_initialization/: frequency_based_initialization.py  frequency_restricted_initialization.py  frequency_restricted_mutation.py
our_crossover/: frequency_based_crossover.py
our_other_crossovers_working/: linkage_based_crossover.py  region_based_crossover.py
permutationsga/: ga.py  ga_test.py  problem.py  qap.py  tsp.py
