[tool.poetry]
name = "ea-course-permutations"
version = "0.1.0"
description = ""
authors = ["Arthur <arthur.guijt@cwi.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.1"
tsplib95 = "^0.7.1"
ipykernel = "^6.13.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.1.1"
pytest = "^7.1.1"
ipykernel = "^6.13.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
